use url-parse to be more isomorphic

--- a/ClientRuntimes/NodeJS/ms-rest/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest/package.json
@@ -37,6 +37,7 @@
     "through": "~2.3.4",
     "tunnel": "~0.0.2",
     "underscore": "1.4.x",
+    "url-parse": "^1.0.4",
     "validator": "~3.1.0"
   },
   "devDependencies": {
