--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## Ignore generated code
 AutoRest/NugetPackageTest/Generated
+AutoRest/Generators/NodeJS/NodeJS.Tests/AcceptanceTests/*.js
 
 ## Ignore user-specific files, temporary files, build results, etc.
 AutoRest/**/Templates/*.cs
