--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Microsoft.Rest.ClientRuntime.Azure.Authentication.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/Microsoft.Rest.ClientRuntime.Azure.Authentication.nuspec
@@ -24,7 +24,7 @@
       </group>
     </references>
     <dependencies>
-      <dependency id="Microsoft.Rest.ClientRuntime" version="[__VERSION_Microsoft.Rest.ClientRuntime__,2)"/>
+      <dependency id="Microsoft.Rest.ClientRuntime" version="[1.3,2)"/>
       <dependency id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="[2.18.206251556]"/>
     </dependencies>
   </metadata>
