--- a/AutoRest/Generators/Python/Python/AutoRest.Generator.Python.csproj
+++ b/AutoRest/Generators/Python/Python/AutoRest.Generator.Python.csproj
@@ -38,29 +38,28 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="ScopeProvider.cs" />
+    <Compile Include="TemplateModels\EnumTemplateModel.cs" />
     <Compile Include="TemplateModels\MethodGroupTemplateModel.cs" />
+    <Compile Include="TemplateModels\ModelInitTemplateModel.cs" />
     <Compile Include="TemplateModels\ModelTemplateModel.cs" />
     <Compile Include="TemplateModels\ServiceClientTemplateModel.cs" />
     <Compile Include="TemplateModels\MethodTemplateModel.cs" />
     <Compile Include="ClientModelExtensions.cs" />
     <Compile Include="TemplateModels\ParameterTemplateModel.cs" />
-    <Compile Include="Templates\MethodGroupIndexTemplate.cs">
-      <DependentUpon>MethodGroupIndexTemplate.cshtml</DependentUpon>
+    <Compile Include="Templates\EnumTemplate.cs">
+      <DependentUpon>EnumTemplate.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\MethodGroupInitTemplate.cs">
+      <DependentUpon>MethodGroupInitTemplate.cshtml</DependentUpon>
     </Compile>
     <Compile Include="Templates\MethodGroupTemplate.cs">
       <DependentUpon>MethodGroupTemplate.cshtml</DependentUpon>
     </Compile>
-    <Compile Include="Templates\MethodJsonPipelineTemplate.cs">
-      <DependentUpon>MethodJsonPipelineTemplate.cshtml</DependentUpon>
-    </Compile>
-    <Compile Include="Templates\MethodStreamPipelineTemplate.cs">
-      <DependentUpon>MethodStreamPipelineTemplate.cshtml</DependentUpon>
-    </Compile>
     <Compile Include="Templates\MethodTemplate.cs">
       <DependentUpon>MethodTemplate.cshtml</DependentUpon>
     </Compile>
-    <Compile Include="Templates\ModelIndexTemplate.cs">
-      <DependentUpon>ModelIndexTemplate.cshtml</DependentUpon>
+    <Compile Include="Templates\ModelInitTemplate.cs">
+      <DependentUpon>ModelInitTemplate.cshtml</DependentUpon>
     </Compile>
     <Compile Include="Templates\ModelTemplate.cs">
       <DependentUpon>ModelTemplate.cshtml</DependentUpon>
@@ -68,13 +67,16 @@
     <Compile Include="Templates\ServiceClientTemplate.cs">
       <DependentUpon>ServiceClientTemplate.cshtml</DependentUpon>
     </Compile>
+    <Compile Include="Templates\ServiceClientInitTemplate.cs">
+      <DependentUpon>ServiceClientInitTemplate.cshtml</DependentUpon>
+    </Compile>
+    <None Include="Templates\EnumTemplate.cshtml" />
     <None Include="Templates\MethodGroupTemplate.cshtml" />
-    <None Include="Templates\MethodJsonPipelineTemplate.cshtml" />
-    <None Include="Templates\MethodStreamPipelineTemplate.cshtml" />
     <None Include="Templates\ModelTemplate.cshtml" />
-    <None Include="Templates\ModelIndexTemplate.cshtml" />
-    <None Include="Templates\MethodGroupIndexTemplate.cshtml" />
+    <None Include="Templates\ModelInitTemplate.cshtml" />
+    <None Include="Templates\MethodGroupInitTemplate.cshtml" />
     <None Include="Templates\ServiceClientTemplate.cshtml" />
+    <None Include="Templates\ServiceClientInitTemplate.cshtml" />
     <None Include="Templates\MethodTemplate.cshtml" />
   </ItemGroup>
   <ItemGroup>
