--- a/ClientRuntimes/Java/client-runtime/build.gradle
+++ b/ClientRuntimes/Java/client-runtime/build.gradle
@@ -3,21 +3,23 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'com.bmuschko.nexus'
+apply plugin: 'maven'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'com.microsoft.rest'
 version = '0.0.1-SNAPSHOT'
 
+configurations {
+    deployerJars
+}
+
 repositories {
     mavenCentral()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
@@ -31,41 +33,43 @@ dependencies {
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.1.1'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
+    deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
 }
 
-modifyPom {
-    setArtifactId 'client-runtime'
-    project {
-        name 'Microsoft AutoRest Runtime for Java'
-        description 'This is the client runtime for AutoRest generated Java clients.'
-        url 'https://github.com/Azure/autorest'
-
-        scm {
-            url 'scm:git:https://github.com/Azure/AutoRest'
-            connection 'scm:git:git://github.com/Azure/AutoRest.git'
-        }
-
-        licenses {
-            license {
-                name 'The MIT License (MIT)'
-                url 'http://opensource.org/licenses/MIT'
-                distribution 'repo'
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            configuration = configurations.deployerJars
+            snapshotRepository(url: "ftp://waws-prod-bay-005.ftp.azurewebsites.windows.net/site/wwwroot/") {
+                authentication(userName: username, password: password)
             }
-        }
+            pom.project {
+                name 'Microsoft AutoRest Runtime for Java'
+                description 'This is the client runtime for AutoRest generated Java clients.'
+                url 'https://github.com/Azure/autorest'
 
-        developers {
-            developer {
-                id 'microsoft'
-                name 'Microsoft'
+                scm {
+                    url 'scm:git:https://github.com/Azure/AutoRest'
+                    connection 'scm:git:git://github.com/Azure/AutoRest.git'
+                }
+
+                licenses {
+                    license {
+                        name 'The MIT License (MIT)'
+                        url 'http://opensource.org/licenses/MIT'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'microsoft'
+                        name 'Microsoft'
+                    }
+                }
             }
         }
     }
-}
-
-nexus {
-    sign = true
-    repositoryUrl = "file://$buildDir/repo"
-    snapshotRepositoryUrl = "file://$buildDir/repo-snapshots"
 }
 
 test {
