--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
@@ -49,11 +49,12 @@
     },
     "dnxcore50": {
       "dependencies": {
+        "Microsoft.CSharp": "4.0.0",
         "System.Diagnostics.Tools": "4.0.0",
         "System.Net.Http": "4.0.0",
+        "System.Runtime.Serialization.Primitives": "4.0.10",
         "System.Threading.Tasks": "4.0.10",
-        "System.Xml.ReaderWriter": "4.0.10",
-        "Microsoft.CSharp": "4.0.0"
+        "System.Xml.ReaderWriter": "4.0.10"
       }
     }
   },
