--- a/NuGet.Config
+++ b/NuGet.Config
@@ -4,5 +4,7 @@
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="xunit" value="https://www.myget.org/F/xunit/api/v2" />
+    <add key="aspnetrc1" value="https://www.myget.org/F/aspnetrc1/api/v2" />
   </packageSources>
 </configuration>
