--- a/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
+++ b/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Rest.Generator.Azure</RootNamespace>
-    <AssemblyName>AutoRest.Generator.Azure.Common</AssemblyName>
+    <AssemblyName>AutoRest.Generator.Azure.Extensions</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <RestorePackages>true</RestorePackages>
     <Configuration Condition=" '$(Configuration)' == '' ">Net45-Debug</Configuration>
@@ -30,7 +30,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="AzureCodeGenerator.cs" />
+    <Compile Include="AzureExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -43,6 +43,10 @@
     <ProjectReference Include="..\..\..\Modelers\Swagger\AutoRest.Modeler.Swagger.csproj">
       <Project>{9517265e-5127-460c-9dde-fe017d73121c}</Project>
       <Name>AutoRest.Modeler.Swagger</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Extensions\AutoRest.Generator.Extensions.csproj">
+      <Project>{7dd043eb-5e53-4180-b123-cc3cc5022e34}</Project>
+      <Name>AutoRest.Generator.Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
