--- a/ClientRuntimes/NodeJS/ms-rest/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest/package.json
@@ -5,7 +5,7 @@
     "email": "azsdkteam@microsoft.com",
     "url": "https://github.com/Azure/AutoRest"
   },
-  "version": "1.12.0",
+  "version": "1.13.1",
   "description": "Client Runtime for Node.js client libraries generated using AutoRest",
   "tags": ["node", "microsoft", "autorest", "clientruntime"],
   "keywords": ["node", "microsoft", "autorest", "clientruntime"],
@@ -14,12 +14,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "dependencies": {
     "underscore": "^1.4.0",
     "tunnel": "~0.0.2",
@@ -31,7 +26,7 @@
   "devDependencies": {
     "jshint": "2.6.3",
     "xunit-file": "0.0.5",
-    "mocha": "2.2.5",
+    "mocha": "2.4.5",
     "should": "5.2.0",
     "node-uuid": "*"
   },
