CSharp: add support for excluding models from a proxy by referencing external assembly
- Change CustomSettings to be dictionary of object to allow for array
items
- Change CSharpGenerator to be able to reference external assemblies and
namespaces when assembly is passed in on commandline (like WCF svcutil).

--- a/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
+++ b/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
@@ -30,6 +30,7 @@
       <Link>AutoRest.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Compile Include="ExternalTestModel.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="MappingTests.cs" />
     <Compile Include="ExtensionsTests.cs" />
@@ -37,6 +38,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Swagger\swagger-externalmodels.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Swagger\swagger-x-ms-client-name.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
