--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.0-preview",
+  "version": "3.1.0-preview",
   "title": "Authentication for Azure Management Clients",
   "description": "Provides ADAL based authentication for Azure management client libraries \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
   "authors": [ "Microsoft" ],
@@ -15,20 +15,19 @@
   },
 
   "dependencies": {
-    "Microsoft.Rest.ClientRuntime": "[3.0.0,4.0)"
+    "Microsoft.Rest.ClientRuntime": "[3.1.0,4.0)"
   },
 
   "frameworks": {
     "net45": {
       "dependencies": {
-        "Microsoft.IdentityModel.Clients.ActiveDirectory": "[2.18.206251556]"
+        "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.26.305102204"
       }
     },    
     "netstandard1.1": {
       "compilationOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50", "portable-net45+win8"],
       "dependencies": {
-        "Microsoft.Cci": "4.0.0-rc2-23931",
         "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.6.212041202-alpha"
       }
     },
@@ -36,7 +35,6 @@
       "compilationOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50"],
       "dependencies": {
-        "Microsoft.Cci": "4.0.0-rc2-23931",
         "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.6.212041202-alpha"
       }
     }
